--- a/Fttx-Orm/Views/Shared/_Layout.cshtml
+++ b/Fttx-Orm/Views/Shared/_Layout.cshtml
@@ -131,7 +131,7 @@
         <header class="main-header">
             <!-- Logo -->
             <a href="" class="logo">
-                <!-- mini logo for sidebar mini 50x50 pixels s -->
+                <!-- mini logo for sidebar mini 50x50 pixels t -->
                 <span class="logo-mini">Crm</span>
                 <!-- logo for regular state and mobile devices -->
                 <span class="logo-lg" style="font-size:15px"><b>TürkTelekom</b>Fttx-Crm</span>
