--- a/Fttx-Orm/Views/AllMenus/Index.cshtml
+++ b/Fttx-Orm/Views/AllMenus/Index.cshtml
@@ -122,12 +122,12 @@
 <script src="~/Scripts/vhs_font.js"></script>
 <script src="~/Scripts/pdfmake.min.js"></script>
 <script src="~/Scripts/jszip.min.js"></script>
+<script src="~/Scripts/jquery.dataTables.min.js"></script>
 <script src="~/Scripts/buttons.flash.min.js"></script>
 <script src="~/Scripts/buttons.html5.min.js"></script>
 <script src="~/Scripts/buttons.print.min.js"></script>
 <script src="~/Scripts/dataTables.buttons.min.js"></script>
-<script src="~/Scripts/jquery-ui.min.js"></script>
-<script src="~/Scripts/jquery.dataTables.min.js"></script>
+<script src="~/Scripts/dataTables.jqueryui.min.js"></script>
 <script>
     $(document).ready(function () {
         $('#data').show();
