--- a/Fttx-Orm/Views/UcNoktas/Create.cshtml
+++ b/Fttx-Orm/Views/UcNoktas/Create.cshtml
@@ -18,7 +18,7 @@
         <div class="form-group" style="height:40px">
             @Html.LabelFor(model => model.FiberNodeBaglantiId, "FiberNodeBaglantiId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @*@Html.DropDownList("FiberNodeBaglantiId", null, htmlAttributes: new { @class = "form-control" })*@
+                @*@Html.DropDownList("FiberNodeBaglantiId", null, htmlAttributes: new { @class = "form-control" })fds*@
                 <link rel="stylesheet" href="~/Content/dropdown.css" />
                 <script src="~/Scripts/dropdown.js" type="text/javascript"></script>
                 <div tabindex="0" class="Jdropdown" style="z-index:4">
