--- a/Fttx-Orm/Views/Shared/_Layout.cshtml
+++ b/Fttx-Orm/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
 
     <script src="~/Scripts/jquery-ui.js"></script>
     <style>
-        input[type=text], input[type=password], input[type=search], input[type=number], select, button, textarea {
+        input[type=text], input[type=password], input[type=search], input[type=number], input[type=date], select, button, textarea {
             border: 1px solid #999999;
             color: #333333;
             width: 300px;
