--- a/Fttx-Orm/Views/SurecSiras/Index.cshtml
+++ b/Fttx-Orm/Views/SurecSiras/Index.cshtml
@@ -5,12 +5,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Süreç Sıra Listele</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Süreç Sıra Oluştur", "Create")
 </p>
-<table class="table">
+@*<table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.ProjeId)
@@ -49,4 +49,155 @@
     </tr>
 }
 
+</table>*@
+
+<div class="loading">
+    <i class="fa fa-refresh fa-spin"></i>
+    Veriler Yükleniyor...
+</div>
+
+<link href="~/Content/jquery-ui.css" rel="stylesheet" />
+<link href="~/Content/dataTable.css" rel="stylesheet" />
+
+<table id="data" class="display" style="display:none" cellspacing="0">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.ProjeId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SurecId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Sira)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Durum)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tfoot>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.ProjeId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SurecId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Sira)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Durum)
+            </th>
+            <th></th>
+        </tr>
+    </tfoot>
+    <tbody>
+        @foreach (var item in Model)
+            {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ProjeId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SurecId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Sira)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Durum)
+                </td>
+                <td>
+                    @Html.ActionLink("Düzenle", "Edit", new { id = item.SurecSiraId }) |
+                    @Html.ActionLink("Detay", "Details", new { id = item.SurecSiraId }) |
+                    @Html.ActionLink("Sil", "Delete", new { id = item.SurecSiraId })
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
+
+<script src="~/Scripts/vhs_font.js"></script>
+<script src="~/Scripts/pdfmake.min.js"></script>
+<script src="~/Scripts/jszip.min.js"></script>
+<script src="~/Scripts/jquery.dataTables.min.js"></script>
+<script src="~/Scripts/buttons.flash.min.js"></script>
+<script src="~/Scripts/buttons.html5.min.js"></script>
+<script src="~/Scripts/buttons.print.min.js"></script>
+<script src="~/Scripts/dataTables.buttons.min.js"></script>
+<script src="~/Scripts/dataTables.jqueryui.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $("#data").show();
+        $(".loading").hide();
+        $('#data').DataTable({
+            "columnDefs": [{
+                "targets": [4],
+                "searchable": false,
+                "orderable": false,
+
+
+            }],
+
+            scrollY: 500,
+            scrollCollapse: true,
+            "pageLength": 25,
+
+            dom: 'Bfrtip',
+            "buttons": [
+                {
+                    extend: 'copy',
+                    footer: false,
+                    exportOptions: {
+                        columns: [0, 1, 2, 3]
+                    }
+                },
+
+                {
+                    extend: 'csv',
+                    footer: false,
+                    exportOptions: {
+                        columns: [0, 1, 2, 3]
+                    }
+                },
+
+                {
+                    extend: 'excel',
+                    footer: false,
+                    exportOptions: {
+                        columns: [0, 1, 2, 3]
+                    }
+                },
+
+                {
+                    extend: 'pdf',
+                    footer: false,
+                    exportOptions: {
+                        columns: [0, 1, 2, 3]
+                    }
+                },
+
+                {
+                    extend: 'print',
+                    footer: false,
+                    exportOptions: {
+                        columns: [0, 1, 2, 3]
+                    }
+                }
+
+            ],
+
+            "oLanguage": {
+                "sSearch": "Bul"
+            }
+
+
+        }).column(0).search();
+
+    });
+
+
+</script>
