--- a/Fttx-Orm/Views/Surecs/Details.cshtml
+++ b/Fttx-Orm/Views/Surecs/Details.cshtml
@@ -5,10 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Süreç Detay</h2>
 
 <div>
-    <h4>Surec</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -22,6 +21,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.SurecId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Düzenle", "Edit", new { id = Model.SurecId }) |
+    @Html.ActionLink("<< Geri dön", "Index")
 </p>
