--- a/Fttx-Orm/Views/IsPlanTarihs/Delete.cshtml
+++ b/Fttx-Orm/Views/IsPlanTarihs/Delete.cshtml
@@ -5,11 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>İş Plan Tarihi Sil</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bu iş plan tarihini silmek istediğinize emin misiniz?</h3>
 <div>
-    <h4>IsPlanTarih</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -50,8 +49,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Sil" class="btn btn-default" /> |
+            @Html.ActionLink("<< Geri dön", "Index")
         </div>
     }
 </div>
