--- a/Fttx-Orm/Views/IsTurs/Details.cshtml
+++ b/Fttx-Orm/Views/IsTurs/Details.cshtml
@@ -5,10 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>İş Tür Detay</h2>
 
 <div>
-    <h4>IsTur</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -30,6 +29,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.IsTurId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Düzenle", "Edit", new { id = Model.IsTurId }) |
+    @Html.ActionLink("<< Geri dön", "Index")
 </p>
