--- a/Fttx-Orm/Views/Ises/Create.cshtml
+++ b/Fttx-Orm/Views/Ises/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>İş Oluştur</h2>
 
 
 @using (Html.BeginForm()) 
@@ -13,10 +13,9 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Is</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+        <div class="form-group" style="height:40px">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
@@ -24,11 +23,37 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" style="height:40px">
             @Html.LabelFor(model => model.TurId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TurId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TurId, "", new { @class = "text-danger" })
+                @*@Html.EditorFor(model => model.TurId, new { htmlAttributes = new { @class = "form-control" } })*@
+                <link rel="stylesheet" href="~/Content/dropdown.css" />
+                <script src="~/Scripts/dropdown.js" type="text/javascript"></script>
+                <div tabindex="0" class="Jdropdown" style="z-index:4;">
+                    <div class="dropdown-a"></div>
+                    <span>-- Seçiniz ! --</span>
+                    <input id="TurId" name="TurId" type="hidden" value="" />
+                    <input type="text" placeholder="Ara" /><i class="fa fa-search"></i>
+                    <div class="options">
+                        <ul>
+                            <li>-- Seçiniz ! --</li>
+                            @foreach (var item in ViewBag.TurId)
+                            {
+
+                                <li id="@item.Value" onclick="gonder(@item.Value)">@item.Text</li>
+                            }
+
+                        </ul>
+                        <script>
+                            function gonder(id) {
+                                document.getElementById('TurId').value = id;
+                            }
+
+                        </script>
+                    </div>
+                </div>
+
+                @Html.ValidationMessageFor(model => model.TurId, "", new { @class = "text-danger", @style = "position:relative;top:31px;" })
             </div>
         </div>
 
@@ -42,16 +67,16 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Oluştur" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("<< Geri dön", "Index")
 </div>
 
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+@*<script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>*@
