--- a/Fttx-Orm/Views/Ises/Delete.cshtml
+++ b/Fttx-Orm/Views/Ises/Delete.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>İş Sil</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bu İşi silmek istediğinize emin misiniz ?</h3>
 <div>
     <h4>Is</h4>
     <hr />
@@ -42,8 +42,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Sil" class="btn btn-default" /> |
+            @Html.ActionLink("<< Geri dön", "Index")
         </div>
     }
 </div>
