--- a/Fttx-Orm/Views/SurecHarekets/Create.cshtml
+++ b/Fttx-Orm/Views/SurecHarekets/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Süreç Hareket Oluştur</h2>
 
 
 @using (Html.BeginForm()) 
@@ -13,21 +13,45 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>SurecHareket</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+        <div class="form-group" style="height:40px">
             @Html.LabelFor(model => model.ProjeId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProjeId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ProjeId, "", new { @class = "text-danger" })
+                @*@Html.EditorFor(model => model.ProjeId, new { htmlAttributes = new { @class = "form-control" } })*@
+                <link rel="stylesheet" href="~/Content/dropdown.css" />
+                <script src="~/Scripts/dropdown.js" type="text/javascript"></script>
+                <div tabindex="0" class="Jdropdown" style="z-index:4">
+                    <div class="dropdown-a"></div>
+                    <span>-- Seçiniz ! --</span>
+                    <input id="ProjeId" name="ProjeId" type="hidden" value="" />
+                    <input type="text" placeholder="Ara" /><i class="fa fa-search"></i>
+                    <div class="options">
+
+                        <ul>
+                            <li>-- Seçiniz ! --</li>
+                            @foreach (var item in ViewBag.ProjeId)
+                            {
+                                <li id="@item.Value" onclick="gonder(@item.Value)">@item.Text</li>
+                            }
+
+                        </ul>
+                        <script>
+                            function gonder(id) {
+                                document.getElementById('ProjeId').value = id;
+                            }
+
+                        </script>
+                    </div>
+                </div>
+                @Html.ValidationMessageFor(model => model.ProjeId, "", new { @class = "text-danger", @style = "position:relative;top:31px;" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.GelisTarih, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.GelisTarih, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.GelisTarih, new { htmlAttributes = new { @class = "form-control", @type="date" } })
                 @Html.ValidationMessageFor(model => model.GelisTarih, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -35,31 +59,54 @@
         <div class="form-group">
             @Html.LabelFor(model => model.GidisTarih, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.GidisTarih, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.GidisTarih, new { htmlAttributes = new { @class = "form-control", @type="date" } })
                 @Html.ValidationMessageFor(model => model.GidisTarih, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" style="height:40px">
             @Html.LabelFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.UserId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
+                @*@Html.EditorFor(model => model.UserId, new { htmlAttributes = new { @class = "form-control" } })*@
+                <div tabindex="0" class="Jdropdown" style="z-index:3">
+                    <div class="dropdown-a"></div>
+                    <span>-- Seçiniz ! --</span>
+                    <input id="UserId" name="UserId" type="hidden" value="" />
+                    <input type="text" placeholder="Ara" /><i class="fa fa-search"></i>
+                    <div class="options">
+
+                        <ul>
+                            <li>-- Seçiniz ! --</li>
+                            @foreach (var item in ViewBag.UserId)
+                            {
+                                <li id="@item.Value" onclick="gonder2(@item.Value)">@item.Text</li>
+                            }
+
+                        </ul>
+                        <script>
+                            function gonder2(id) {
+                                document.getElementById('UserId').value = id;
+                            }
+
+                        </script>
+                    </div>
+                </div>
+                @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger", @style = "position:relative;top:31px;" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Oluştur" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("<< Geri dön", "Index")
 </div>
 
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+@*<script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>*@
