--- a/Fttx-Orm/Views/Ises/Create.cshtml
+++ b/Fttx-Orm/Views/Ises/Create.cshtml
@@ -60,7 +60,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Aciklama, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Aciklama, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Aciklama, new { htmlAttributes = new { @class = "form-control", @type="text" } })
                 @Html.ValidationMessageFor(model => model.Aciklama, "", new { @class = "text-danger" })
             </div>
         </div>
