--- a/Fttx-Orm/Views/IsPlanTarihs/Create.cshtml
+++ b/Fttx-Orm/Views/IsPlanTarihs/Create.cshtml
@@ -153,6 +153,15 @@
 <link href="~/Content/fullcalendar.min.css" rel="stylesheet" />
 <script src="~/Scripts/moment.min.js"></script>
 <script src="~/Scripts/fullcalendar.min.js"></script>
+@{
+    string so = "";
+    foreach (var st in (new Fttx_Orm.DAL.FttxContext()).IsPlanTarihs.ToList())
+    {
+
+        so = so + "{\"id\":" + st.IsId + st.SurecId + ",\"title\":\"" + ((new Fttx_Orm.DAL.FttxContext()).Iss.Single(u => u.Id == Convert.ToInt64(st.IsId)).Name) + " / " + ((new Fttx_Orm.DAL.FttxContext()).Surecs.Single(p => p.SurecId == Convert.ToInt64(st.SurecId)).SurecAdi) + "\",\"start\":\"" + st.BaslangicTarih + "\", \"end\":\"" + st.BitisTarih + "\"},";
+    }
+
+}
 
 
 
@@ -163,7 +172,7 @@
                 <div id='external-events'>
                     <div id='external-events-listing'>
                         <h4>Process Event</h4>
-                        <div id="" class='fc-event'></div>
+                               <div id="" class='fc-event'></div>
                         <p style="display:none">
                             <input type='checkbox' id='drop-remove' checked='checked' />
                             <label for='drop-remove'>remove after drop</label>
@@ -180,6 +189,8 @@
 </div>
 
 <script>
+    var ss=[];
+    var i=0;
     $(document).ready(function () {
 
         /* initialize the external events
@@ -216,16 +227,20 @@
             editable: true,
             droppable: true, // this allows things to be dropped onto the calendar
             dragRevertDuration: 0,
-            drop: function () {
+            drop: function (event) {
                 // is the "remove after drop" checkbox checked?
                 if ($('#drop-remove').is(':checked')) {
                     // if so, remove the element from the "Draggable Events" list
+                    ss[i] = $(this).attr("id");
+                    i = i + 1;
                     $(this).remove();
 
                 }
             },
             eventClick: function (event) {
 
+            }, eventRender:function(event,element){
+                gel();
             },
             eventDragStop: function (event, jsEvent, ui, view) {
 
@@ -240,7 +255,7 @@
                     el.data('event', { title: event.title, id: event.id, stick: true });
                 }
             },
-            events: ["a"]
+            events: [@so.Length <= 0 ? "" : so.Substring(0, so.Length - 1)]
         });
     });
 
@@ -248,21 +263,22 @@
         var eventsFromCalendar = $('#calendar').fullCalendar('clientEvents');
         var data=[[]];
 
-	
+
         for(var i=0;i<eventsFromCalendar.length;i++){
             var d =new Date(eventsFromCalendar[i]["start"]["_d"]);
-		
+
             var c;
             if(eventsFromCalendar[i]["end"]!=null)
             {
                 var end=new Date(eventsFromCalendar[i]["end"]["_d"]);
                 c=end.getDate()+"."+(end.getMonth()+1)+"."+end.getFullYear();
             }else {c="";}
-		
+
             var t=d.getDate()+"."+(d.getMonth()+1)+"."+d.getFullYear();
-            data[i] = [eventsFromCalendar[i]["id"], eventsFromCalendar[i]["title"], t,c,"/*SESSİON ID*/"];
-        }
-	
+
+            data[i] = [eventsFromCalendar[i]["id"], eventsFromCalendar[i]["title"], t,c,@Convert.ToInt16(HttpContext.Current.User.Identity.Name))}];
+
+
         $("#planingData").attr("value",data);
         $("#planingData2").attr("value",ss);
     }
