--- a/Fttx-Orm/Views/IsPlanTarihs/Index.cshtml
+++ b/Fttx-Orm/Views/IsPlanTarihs/Index.cshtml
@@ -10,6 +10,8 @@
 <p>
     @Html.ActionLink("İş Plan Tarihi Oluştur", "Create")
 </p>
+
+
 @*<table class="table">
     <tr>
         <th>
@@ -220,6 +222,16 @@
      }
 </style>
 
+@{
+    string so = "";
+    foreach (var st in Model)
+    {
+
+        so = so + "{\"id\":" + st.IsId+st.SurecId + ",\"title\":\"" + ((new Fttx_Orm.DAL.FttxContext()).Iss.Single(u=>u.Id==Convert.ToInt64(st.IsId)).Name) + " / " + ((new Fttx_Orm.DAL.FttxContext()).Surecs.Single(p => p.SurecId==Convert.ToInt64(st.SurecId)).SurecAdi) + "\",\"start\":\"" + st.BaslangicTarih + "\", \"end\":\"" + st.BitisTarih + "\"},";
+    }
+
+}
+
 <div id='calendar-container'>
     <div id='calendar'></div>
 </div>
@@ -265,7 +277,7 @@
                     el.data('event', { title: event.title, id: event.id, stick: true });
                 }
             },
-            events: ["a"]
+            events: [@so.Length <= 0 ? "" : so.Substring(0, so.Length - 1)]
         });
     });
 </script>
