--- a/Fttx-Orm/Views/IsPlanTarihs/Index.cshtml
+++ b/Fttx-Orm/Views/IsPlanTarihs/Index.cshtml
@@ -227,7 +227,8 @@
     foreach (var st in Model)
     {
 
-        so = so + "{\"id\":" + st.IsId+st.SurecId + ",\"title\":\"" + ((new Fttx_Orm.DAL.FttxContext()).Iss.Single(u=>u.Id==Convert.ToInt64(st.IsId)).Name) + " / " + ((new Fttx_Orm.DAL.FttxContext()).Surecs.Single(p => p.SurecId==Convert.ToInt64(st.SurecId)).SurecAdi) + "\",\"start\":\"" + st.BaslangicTarih + "\", \"end\":\"" + st.BitisTarih + "\"},";
+        int a = int.Parse(st.IsId);
+        so = so + "{\"id\":" + st.IsId+st.SurecId + ",\"title\":\"" + ((new Fttx_Orm.DAL.FttxContext()).Iss.Single(u=>u.Id==a).Name) + " / " + ((new Fttx_Orm.DAL.FttxContext()).Surecs.Single(p => p.SurecId==a).SurecAdi) + "\",\"start\":\"" + st.BaslangicTarih + "\", \"end\":\"" + st.BitisTarih + "\"},";
     }
 
 }
@@ -277,7 +278,7 @@
                     el.data('event', { title: event.title, id: event.id, stick: true });
                 }
             },
-            events: [@so.Length <= 0 ? "" : so.Substring(0, so.Length - 1)]
+            events: [@Html.Raw(so.Substring(0, so.Length - 1).ToString())]
         });
     });
 </script>
